# MedIQ-AI

./: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  setup.py  store_index.py  template.sh
src/: helper.py  prompt.py
templates/: chat.html
